-Fixed problem with the tutorial crashing - apparently on setContentView, certain attribute values can cause a crash. I think it was a TextView with a width set to 0sp.

--- a/app/src/main/res/layout/activity_wizard.xml
+++ b/app/src/main/res/layout/activity_wizard.xml
@@ -55,6 +55,7 @@
     <TextView android:text="@string/tutorial_paragraph_5"
         android:layout_marginTop="5dp"
         android:textColor="#FFFFFF"
+        android:layout_width="match_parent"
         android:textSize="14sp"
         android:layout_height="wrap_content"
         android:textStyle="bold"/>
